--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,9 +74,12 @@
     <Compile Include="Assets\_Scripts\Manager\Product Manager\ProductManager.cs" />
     <Compile Include="Assets\_Scripts\Unit\Plants\INightPlant.cs" />
     <Compile Include="Assets\_Scripts\Unit\UnitData.cs" />
+    <Compile Include="Assets\_Scripts\UI\WinPanel.cs" />
     <Compile Include="Assets\_Scripts\Product\Projectile.cs" />
     <Compile Include="Assets\_Scripts\Unit\Plants\Specify Plant\PeaShooter.cs" />
+    <Compile Include="Assets\_Scripts\UI\LosePanel.cs" />
     <Compile Include="Assets\_Scripts\GameConfig\ConfigHelper.cs" />
+    <Compile Include="Assets\_Scripts\Manager\MenuUIManager.cs" />
     <Compile Include="Assets\_Scripts\Manager\CarManager.cs" />
     <Compile Include="Assets\_Scripts\UI\UnitButtonPanel.cs" />
     <Compile Include="Assets\_Scripts\Unit\IUnit.cs" />
@@ -114,16 +117,14 @@
     <Compile Include="Assets\_Scripts\Manager\GridManager.cs" />
     <Compile Include="Assets\_Scripts\GameConfig\LevelConfig.cs" />
     <Compile Include="Assets\_Scripts\Product\IProduct.cs" />
+    <Compile Include="Assets\_Scripts\Scene\SceneNavigator.cs" />
     <Compile Include="Assets\_Scripts\Manager\SunInGameManager.cs" />
     <Compile Include="Assets\_Scripts\Product\Spore.cs" />
     <Compile Include="Assets\_Scripts\Manager\Unit Manager\UnitManager.cs" />
     <Compile Include="Assets\_Scripts\Debuff\IDebuff.cs" />
     <Compile Include="Assets\_Scripts\Manager\InputManager.cs" />
     <Compile Include="Assets\_Scripts\Unit\Plants\Specify Plant\CherryBomb.cs" />
-    <Compile Include="Assets\_Scripts\Scene\SceneNavigator.cs" />
-    <Compile Include="Assets\_Scripts\Manager\MenuUIManager.cs" />
-    <Compile Include="Assets\_Scripts\UI\WinPanel.cs" />
-    <Compile Include="Assets\_Scripts\UI\LosePanel.cs" />
+    <Compile Include="Assets\_Scripts\Loading\LoadingHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
