--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,10 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+UserSettings/EditorUserSettings.asset
+UserSettings/EditorUserSettings.asset
+UserSettings/EditorUserSettings.asset
+UserSettings/Layouts/default-2021.dwlt
+Assembly-CSharp.csproj
+UserSettings/Layouts/default-2021.dwlt
+Assembly-CSharp.csproj
